--- a/app/src/main/res/layout/activity_home_docente.xml
+++ b/app/src/main/res/layout/activity_home_docente.xml
@@ -20,10 +20,7 @@
         android:text="crea gruppi" />
 
     <ListView
-        android:id="@+id/elencoCorsi"
+        android:id="@+id/elencoCorsi2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:cacheColorHint="#FFFFFF"
-        android:divider="@android:drawable/divider_horizontal_dark"
-        android:scrollbarSize="4dp" />
+        android:layout_height="match_parent" />
 </LinearLayout>
