--- a/app/src/main/res/layout/row_layout_prenotazioni_attive_activity.xml
+++ b/app/src/main/res/layout/row_layout_prenotazioni_attive_activity.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/row_table"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginTop="5dp"
+    android:layout_marginBottom="5dp">
 
     <TableRow
         android:id="@+id/riga_luogo"
@@ -59,6 +62,24 @@
     </TableRow>
 
     <TableRow
+        android:id="@+id/riga_gruppo"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/textView31"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:text="Gruppo:" />
+
+        <TextView
+            android:id="@+id/row_gruppo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </TableRow>
+
+    <TableRow
         android:id="@+id/riga_stato"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -74,26 +95,6 @@
             android:id="@+id/row_stato"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
-    </TableRow>
-
-    <TableRow
-        android:id="@+id/riga_gruppo"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="5dp">
-
-        <TextView
-            android:id="@+id/textView31"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:text="Gruppo:" />
-
-        <TextView
-            android:id="@+id/row_gruppo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp" />
     </TableRow>
 
 </TableLayout>
